fixed overlapping text

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,8 @@
+h1,
+h2 {
+  
+}
+
 p {
   color: black;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
